@@ -1838,10 +1838,14 @@ ZEND_VM_HELPER(zend_do_fcall_common_helper, ANY, ANY)
 		}
 
 		EG(current_execute_data) = EXECUTE_DATA;
+
+/*	We shouldn't fix bad extensions here,
+    because it can break proper ones (Bug #34045)
 		if (!EX(function_state).function->common.return_reference) {
 			EX_T(opline->result.u.var).var.ptr->is_ref = 0;
 			EX_T(opline->result.u.var).var.ptr->refcount = 1;
 		}
+*/
 		if (!return_value_used) {
 			zval_ptr_dtor(&EX_T(opline->result.u.var).var.ptr);
 		}
